kubernetes/weaviate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weaviate
  name: weaviate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weaviate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: weaviate
    spec:
      containers:
        - env:
            - name: AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED
              value: "false"
            - name: AUTHENTICATION_APIKEY_ALLOWED_KEYS
              value: WVF5YThaHlkYwhGUSmCRgsX3tD5ngdN8pkih
            - name: AUTHENTICATION_APIKEY_ENABLED
              value: "true"
            - name: AUTHENTICATION_APIKEY_USERS
              value: hello@dify.ai
            - name: AUTHORIZATION_ADMINLIST_ENABLED
              value: "true"
            - name: AUTHORIZATION_ADMINLIST_USERS
              value: hello@dify.ai
            - name: CLUSTER_HOSTNAME
              value: node1
            - name: DEFAULT_VECTORIZER_MODULE
              value: none
            - name: PERSISTENCE_DATA_PATH
              value: /var/lib/weaviate
            - name: QUERY_DEFAULTS_LIMIT
              value: "25"
          image: semitechnologies/weaviate:1.19.0
          name: weaviate
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/weaviate
              name: weaviate-claim0
      restartPolicy: Always
      volumes:
        - name: weaviate-claim0
          persistentVolumeClaim:
            claimName: weaviate-claim0

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weaviate
  name: weaviate
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: weaviate
