kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - env:
            - name: EDITION
              value: SELF_HOSTED
            - name: CONSOLE_API_URL
              value: ""
            - name: APP_API_URL
              value: ""
          image: langgenius/dify-web:$DIFY_VERSION
          name: web
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "dify-web-backendconfig"}'
  labels:
    app: web
  name: web
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: web
